# ttst

./: .dockerignore  .gitignore  BLUEPRINT.md  Dockerfile  README.md  docker-compose.yml  env.example  factoring_log.md  pyproject.toml
logs/: .gitkeep
output/data_files/: final_data-20250623-204147.csv  final_data-20250623-212705.csv  final_data-20250623-224648.csv
output/reports/: report-20250623-204147.md  report-20250623-212705.md  report-20250623-224648.md
resources/rag_index/: default__vector_store.json  docstore.json  index_store.json
src/: agent.py  embedder.py  main.py
src/components/: code_executor.py  context.py  rag_retriever.py
src/prompts/: system_prompts.py
src/utils/: __init__.py  data_profiler.py  logger.py  warnings_config.py
tests/: qa.json  qa_result.json  run_qa.py  test_agent.py  test_code_executor.py  test_rag_retriever.py  test_scenario_anova.md  test_scenario_linear_regression.md  test_scenario_proportion_ztest.md  validation_result.json
