[project]
name = "text-to-statistical-test"
version = "0.1.0"
description = ""
authors = [
    {name = "wesley"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.88.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "typer[all] (>=0.16.0,<0.17.0)",
    "llama-index (>=0.12.42,<0.13.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "llama-index-vector-stores-faiss (>=0.4.0,<0.5.0)",
    "llama-index-embeddings-huggingface (>=0.5.4,<0.6.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.1"

